# wall_bug

./: LICENSE  README.md  clean.sh  config.ini  config.yaml  pyproject.toml  record.sh  record_and_transcribe.sh  requirements.txt  setup.sh  transcribe.sh  wall_bug_daemon.sh
automation/: codex_orchestrator.py  filesystem_contract.json  initial_codex_tasks.json  known_artifacts.json  orchestrator.py  wall_bug_dag.dot  wall_bug_dag.json  wall_bug_tasks.json
automation/engine/: codex_runner.py  executor.py  filesystem_guard.py  git_tools.py  prompt_builder.py  repo_doctor.py  task_manager.py  test_runner.py
automation/ui/: dashboard.py
docs/: usage.md
scripts/: cleanup.sh  enforce_filesystem_contract.py
src/wallbug/: archive.py  audio_processor.py  audio_retention_policy.py  cli.py  config.py  directory_manager.py  logger.py  logging.py  metadata.py  note_processing.py  note_processor.py  recorder.py  search_engine.py  summarizer.py  transcriber.py  transcription_trigger.py  utils.py  vad.py  whisper.cpp
src/wallbug/commands/: __init__.py  daemon.py  record.py  search.py  summarize_day.py  transcribe.py
src/wallbug/config/: __init__.py  config.py  constants.py
src/wallbug/data/: metadata.json  sample_transcript.txt
src/wallbug/tests/: test_metadata.py
systemd/: myapp.service  wallbug.service
tests/: test_audio_retention_policy.py  test_directory_manager.py  test_search_engine.py
